[package]
name = "dera"
authors = ["Jk Jensen <azjkjensen@gmail.com>"]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.80"
axum = "0.6.6"
mysten-service = { git = "https://github.com/MystenLabs/sui", version = "0.0.1" }
prometheus = "0.13.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
